# CMake-Tutorial-sample

./: CMakeLists.txt  README.md  main.cpp
test/: CMakeLists.txt
test/ctest/: CMakeLists.txt  addvalues_negpos.cpp
